Add CRYSTAL specific to .gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,11 @@
+#CRYSTAL specific
+*.f*
+*.hessopt
+*.optinfo
+*.SCFLOG
+*.xyz
+
+
 # Byte-compiled / optimized / DLL files
 __pycache__/
 *.py[cod]
