--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,5 @@
 [build-system]
 requires = [
-    "setuptools>=42",
-    "wheel"
-]
+    "setuptools>=43.0",
+    "wheel"]
 build-backend = "setuptools.build_meta"
