doc autogen debug 2

--- a/.github/workflows/sphinx_docs_to_gh_pages.yaml
+++ b/.github/workflows/sphinx_docs_to_gh_pages.yaml
@@ -34,4 +34,4 @@ jobs:
           dir_docs: docs_source
           sphinxapiopts: ''
           sphinxapiexclude: '../docs/*setup* ../docs/*.ipynb ../docs/test*'
-          sphinxopts: '-b html ./ -o ../docs/'
+          sphinxopts: '-o ../docs/'
