doc autogen debug 4

--- a/.github/workflows/sphinx_docs_to_gh_pages.yaml
+++ b/.github/workflows/sphinx_docs_to_gh_pages.yaml
@@ -32,6 +32,6 @@ jobs:
         with:
           branch: main
           dir_docs: docs
-          sphinxapiopts: ''
+          sphinxapiopts: '-o docs/ CRYSTALpytools/'
           sphinxapiexclude: '*setup* *.ipynb test*'
-          sphinxopts: '-o docs/ CRYSTALpytools/ '
+          sphinxopts: ''
