--- a/.github/workflows/sphinx_docs_to_gh_pages.yaml
+++ b/.github/workflows/sphinx_docs_to_gh_pages.yaml
@@ -31,7 +31,7 @@ jobs:
         uses: uibcdf/action-sphinx-docs-to-gh-pages@v1.1.0
         with:
           branch: main
-          dir_docs: docs
-          sphinxapiopts: '-o docs/ CRYSTALpytools/'
+          dir_docs: docs_source
+          sphinxapiopts: '-o ../docs/ ../CRYSTALpytools/'
           sphinxapiexclude: '*setup* *.ipynb test*'
           sphinxopts: ''
