--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,10 @@
-numpy>=1.23.0
-sympy>=1.11.1
-scipy>=1.9.0
-mendeleev>=0.14.0
-matplotlib>=3.5.3
-pandas>=1.4.3
-PyYAML>=6.0
+numpy
+sympy
+scipy
+mendeleev
+matplotlib
+pandas
+PyYAML
 pymatgen>=2022.7.25
 ase>=3.22.1
 basis_set_exchange>=0.9.1
