--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,10 @@
 numpy
 sympy
 scipy
-mendeleev
 matplotlib
 pandas
 PyYAML
+mendeleev>=0.14.0
 pymatgen>=2022.7.25
 ase>=3.22.1
 basis_set_exchange>=0.9.1
