update for doc site

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,6 @@
-numpy<2.0
+numpy
 sympy
-scipy<1.14.0
+scipy
 matplotlib
 pandas
 PyYAML
@@ -8,3 +8,5 @@ mendeleev>=0.14.0
 pymatgen>=2022.7.25
 ase>=3.22.1
 basis_set_exchange>=0.9.1
+nbsphinx>=0.9.5
+sphinx-gallery>=0.17.1
