--- a/.github/workflows/sphinx_docs_to_gh_pages.yaml
+++ b/.github/workflows/sphinx_docs_to_gh_pages.yaml
@@ -12,12 +12,13 @@ jobs:
     runs-on: ubuntu-latest
     name: Sphinx docs to gh-pages
     steps:
-      - uses: actions/checkout@v3
+      - uses: actions/checkout@v4
         with:
           fetch-depth: 0
       - name: Make conda environment
-        uses: conda-incubator/setup-miniconda@v2
+        uses: conda-incubator/setup-miniconda@v3
         with:
+          activate-environment: whatever
           python-version: 3.9    # Python version to build the html sphinx documentation
           environment-file: .github/docs_env.yaml    # Path to the documentation conda environment
           auto-update-conda: false
@@ -28,7 +29,7 @@ jobs:
         run: |
           python setup.py install
       - name: Running the Sphinx to gh-pages Action
-        uses: uibcdf/action-sphinx-docs-to-gh-pages@v1.1.0
+        uses: uibcdf/action-sphinx-docs-to-gh-pages@v2.1.0
         with:
           branch: main
           dir_docs: docs_source
