Update python requirement for gh-pages

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,4 @@
-numpy
+numpy<2.0
 sympy
 scipy
 matplotlib
@@ -6,6 +6,5 @@ pandas
 PyYAML
 mendeleev>=0.14.0
 pymatgen>=2022.7.25
-pymatgen<2024.10.3
 ase>=3.22.1
 basis_set_exchange>=0.9.1
