--- a/.github/workflows/sphinx_docs_to_gh_pages.yaml
+++ b/.github/workflows/sphinx_docs_to_gh_pages.yaml
@@ -18,6 +18,7 @@ jobs:
       - name: Make conda environment
         uses: conda-incubator/setup-miniconda@v3
         with:
+          activate-environment: whatever
           python-version: 3.10    # Python version to build the html sphinx documentation
           environment-file: .github/docs_env.yaml    # Path to the documentation conda environment
           auto-update-conda: false
