--- a/.github/workflows/sphinx_docs_to_gh_pages.yaml
+++ b/.github/workflows/sphinx_docs_to_gh_pages.yaml
@@ -16,13 +16,13 @@ jobs:
         with:
           fetch-depth: 0
       - name: Make conda environment
-        uses: conda-incubator/setup-miniconda@v2
+        uses: mamba-org/setup-micromamba@v1
         with:
-          python-version: 3.10    # Python version to build the html sphinx documentation
+          environment-name: test
+          # Python version to build the html sphinx documentation
+          create-args: >-
+            python=3.10 
           environment-file: .github/docs_env.yaml    # Path to the documentation conda environment
-          auto-update-conda: false
-          auto-activate-base: false
-          show-channel-urls: true
       - name: Installing the library
         shell: bash -l {0}
         run: |
