--- a/.github/workflows/sphinx_docs_to_gh_pages.yaml
+++ b/.github/workflows/sphinx_docs_to_gh_pages.yaml
@@ -38,4 +38,4 @@ jobs:
       - name: Copy meta tag from Google Search Console
         shell: bash -l {0}
         run: |
-          sed -i '/<head>/a\  <meta name="google-site-verification" content="VCwinqac8JtcGFEAmAYxTO3I1MmOx119sGsTHSDtFYE" />' index.html
+          sed -i '/<head>/a\  <meta name="google-site-verification" content="VCwinqac8JtcGFEAmAYxTO3I1MmOx119sGsTHSDtFYE" />' docs_source/_build/html/index.html
